# partpost

./: README.MD  environment.yml  pyproject.toml
examples/: partpost_cfg.json
src/partpost/: cli.py  proc.py
tests/: test_partnc.py
