[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "partpost"
version = "0.1.0"
description = "A tool to process Particle Tracking NetCDF files from Delft3D FM model for ArcGIS."
authors = [{name = "Ken TSUI", email = "kentsui.dev@gmail.com"}]
dependencies = [
    "xarray",
    "numpy",
    "pandas",
    "netCDF4",
    "dask",
    "geopandas",
    "shapely",
    "openpyxl"
]
requires-python = ">=3.8"

[project.scripts]
partpost = "partpost.cli:main"